# datelib

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  coverage_sonar.xml  sonar-project.properties
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CUSTOM_AGENTS.md  DOCUMENTATION_WORKFLOW.md  GITHUB_PAGES_MIGRATION.md  GITHUB_PAGES_SETUP.md  NOTIFICATIONS.md  RELEASE_WORKFLOW_SETUP.md  TESTING_SUMMARY.md
.github/agents/: architect.agent.md  cpp-code-reviewer.agent.md
.github/workflows/: auto-delete-branch.yml  branch-protection.yml  build-and-test.yml  generate-docs.yml  release-prepare.yml  release-publish.yml  release.yml
cmake/: Catch2Setup.cmake  ClangFormat.cmake
include/datelib/: Date.h  DayCountConvention.h  HolidayCalendar.h  HolidayRule.h  business_day_adjuster.h  date.h  exceptions.h  period.h  period_advancer.h
src/: Date.cpp  DayCountConvention.cpp  HolidayCalendar.cpp  HolidayRule.cpp  business_day_adjuster.cpp  date.cpp  period.cpp  period_advancer.cpp
tests/: CMakeLists.txt  test_Date.cpp  test_DayCountConvention.cpp  test_HolidayCalendar.cpp  test_HolidayRule.cpp  test_date.cpp
